# module-6-testing

./: README.md
zoo-management/: .env  Dockerfile  README.md  app.py  docker-compose.yml  package-lock.json  pyproject.toml  requirements.txt
zoo-management/core/models/: animal.py  employee.py
zoo-management/core/routes/: animal.py  employee.py
zoo-management/core/services/: animal_service.py  employee_service.py
zoo-management/core/utils/: validation.py
zoo-management/static/css/: styles.css
zoo-management/templates/: animals.html  base.html  employees.html  home.html  update_animal.html  update_employee.html
zoo-management/test/: conftest.py  test_animal.py  test_app.py  test_employee.py
